--- a/WhatToEatAPI/appsettings.json
+++ b/WhatToEatAPI/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"AZURE_SQL_CONNECTIONSTRING": "Server=tcp:jessie.database.windows.net,1433;Initial Catalog=WhatToEat;Persist Security Info=False;User ID=jessie;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Authentication=\"Active Directory Default\";"
-    "AZURE_SQL_CONNECTIONSTRING": "Server=tcp:jessie.database.windows.net,1433;Initial Catalog=WhatToEat;Persist Security Info=False;User ID=jacciekao;Password=Jaccie850315;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "MYSQL_CONNECTION_STRING": "server=127.0.0.1;uid=root;pwd=Jaccie850315;database=what_to_eat"
   },
   "GoogleMap": {
     "Key": "AIzaSyC5jO39cyFb2vMOvm-TWFvmT393Eu5b0P4"
